--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,25 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+    <ion-header color="primary">
+        <ion-toolbar>
+            <ion-title>Pages</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <ion-content>
+        <ion-list>
+            <button ion-item (click)="openPage( tabs )">
+              Abrir Tabs
+            </button>
+            <button ion-item (click)="openPage( ajustes2 )">
+              Abrir Ajustes 2
+            </button>
+            <!-- <button ion-item (click)="closeMenu()">
+              Close Menu
+            </button> -->
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+
+
+
+<ion-nav [root]="rootPage" #content></ion-nav>
